# ProBord

./: README.md  __init__.py  cli.py  prepare_blastn_db.sh  pyproject.toml
probord/: probord.py  pyproject.toml
test/data/phage_HP2/: LR134490.1.fna  phage_HP2_location.tsv
test/data/phage_vB_MhM_3927AP2/: NZ_CP017531.1.fna  phage_vB_MhM_3927AP2_location.tsv
test/result/phage_HP2_prediction/: att_prediction.tsv
test/result/phage_HP2_prediction/attB_blast/: attB_mix_outfmt.txt
test/result/phage_vB_MhM_3927AP2_prediction/: att_prediction.tsv
test/result/phage_vB_MhM_3927AP2_prediction/attB_blast/: attB_mix_outfmt.txt
