[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "probord"
version = "1.0"
description = "A tool for precise delimitation of provirus borders in host genomes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["biopython", "ncbi-genome-download"]

[project.scripts]
probord = "probord.cli:main"

[tool.setuptools.packages.find]
include = ["probord*"]

[tool.setuptools.package-data]
probord = ["prepare_blastn_db.sh"]
