[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "probord"
version = "1.0"
description = "A tool for precise delimitation of provirus borders in host genomes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["biopython", "ncbi-genome-download"]

[project.scripts]
probord = "probord:main"

[tool.setuptools]
py-modules = ["probord"]
